# distributed-vectordb

./: .gitignore  CMakeLists.txt  README.md  patch_debug.cpp  test.cpp  test_cache_debug  test_checkpoint.cpp  test_clock.cpp  test_config.cpp  test_error.cpp  test_metrics.cpp  test_raft_state.cpp  test_recovery.cpp  test_thread_pool.cpp  test_utils.cpp  test_wal.cpp
src/common/: CMakeLists.txt
src/common/clock/: CMakeLists.txt  README.md  clock.h  fake_clock.cpp  fake_clock.h  hlc.cpp  hlc.h  physical_clock.cpp  physical_clock.h
src/common/config/: CMakeLists.txt  README.md  config.h  config.yaml  config_loader.cpp  config_loader.h
src/common/error/: CMakeLists.txt  README.md  error_or.h  status.cpp  status.h  status_code.h
src/common/logging/: CMakeLists.txt  README.md  log_level.h  logger.cpp  logger.h
src/common/metrics/: CMakeLists.txt  README.md  metrics_registry.cpp  metrics_registry.h
src/common/serialization/: CMakeLists.txt  README.md  binary_serializer.cpp  binary_serializer.h
src/common/thread_pool/: CMakeLists.txt  README.md  thread_pool.cpp  thread_pool.h
src/common/utils/: CMakeLists.txt  README.md  hash.cpp  hash.h  string_utils.cpp  string_utils.h  uuid.h
src/raft/: CMakeLists.txt
src/raft/core/: CMakeLists.txt  raft_state.cpp  raft_state.h
src/raft/election/: CMakeLists.txt
src/raft/membership/: CMakeLists.txt
src/raft/replication/: CMakeLists.txt
src/raft/snapshot/: CMakeLists.txt
src/raft/storage/: CMakeLists.txt
src/storage/: CMakeLists.txt
src/storage/cache/: CMakeLists.txt  README.md  block_cache.cpp  block_cache.h
src/storage/checkpoint/: CMakeLists.txt  README.md  checkpoint_manager.cpp  checkpoint_manager.h
src/storage/compaction/: CMakeLists.txt  README.md  compaction_manager.cpp  compaction_manager.h  leveled_compaction.h
src/storage/engine/: CMakeLists.txt  storage_engine.cpp  storage_engine.h
src/storage/memtable/: CMakeLists.txt  README.md  memtable.cpp  memtable.h  skip_list.cpp  skip_list.h
src/storage/recovery/: CMakeLists.txt  README.md  recovery_manager.cpp  recovery_manager.h
src/storage/sstable/: CMakeLists.txt  README.md  block.cpp  block.h  bloom_filter.cpp  bloom_filter.h  sstable_reader.cpp  sstable_reader.h  sstable_writer.cpp  sstable_writer.h
src/storage/wal/: CMakeLists.txt  README.md  wal.cpp  wal.h  wal_entry.h
tests/integration/: CMakeLists.txt  test_storage_engine.cpp
tests/unit/: CMakeLists.txt  test_cache.cpp  test_compaction.cpp  test_logging.cpp  test_memtable.cpp  test_serialization.cpp  test_sstable.cpp
